// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GeneratedAliasTypeSchemaImpl > writeToFile > generates raw type alias pointing to raw type reference 1`] = `
"export const MyAlias: Schema<serializers.Raw, MyAlias> = stringSchema() as any;

export declare namespace MyAlias {
    export type Raw = string;
}
"
`;

exports[`GeneratedAliasTypeSchemaImpl > writeToFile > generates schema for alias of named object type 1`] = `
"export const UserAlias: ObjectSchema<serializers.Raw, UserAlias> = stringSchema() as any;

export declare namespace UserAlias {
    export type Raw = string;
}
"
`;

exports[`GeneratedAliasTypeSchemaImpl > writeToFile > generates schema for alias of non-object named type (uses Schema) 1`] = `
"export const StatusAlias: Schema<serializers.Raw, StatusAlias> = stringSchema() as any;

export declare namespace StatusAlias {
    export type Raw = string;
}
"
`;

exports[`GeneratedAliasTypeSchemaImpl > writeToFile > generates schema for branded alias with transform 1`] = `
"export const BrandedId: Schema<serializers.Raw, BrandedId> = stringSchema().transform() as any;

export declare namespace BrandedId {
    export type Raw = string;
}
"
`;

exports[`GeneratedAliasTypeSchemaImpl > writeToFile > generates schema for simple string alias 1`] = `
"export const UserId: Schema<serializers.Raw, UserId> = stringSchema() as any;

export declare namespace UserId {
    export type Raw = string;
}
"
`;

exports[`GeneratedEnumTypeSchemaImpl > writeToFile > generates raw type declaration with wire values as string literals 1`] = `
"export const Color: Schema<serializers.Raw, Color> = enum_(["RED", "BLUE", "GREEN"]) as any;

export declare namespace Color {
    export type Raw = "RED" | "BLUE" | "GREEN";
}
"
`;

exports[`GeneratedEnumTypeSchemaImpl > writeToFile > generates schema for basic enum 1`] = `
"export const Status: Schema<serializers.Raw, Status> = enum_(["active", "inactive", "pending"]) as any;

export declare namespace Status {
    export type Raw = "active" | "inactive" | "pending";
}
"
`;

exports[`GeneratedEnumTypeSchemaImpl > writeToFile > generates schema for single-value enum 1`] = `
"export const Direction: Schema<serializers.Raw, Direction> = enum_(["north"]) as any;

export declare namespace Direction {
    export type Raw = "north";
}
"
`;

exports[`GeneratedObjectTypeSchemaImpl > writeToFile > generates raw type with extends references 1`] = `
"export const Child: ObjectSchema<serializers.Raw, Child> = object({}).extend().extend() as any;

export declare namespace Child {
    export interface Raw extends RawNamedType, RawNamedType {
    }
}
"
`;

exports[`GeneratedObjectTypeSchemaImpl > writeToFile > generates raw type with index signature for extraProperties 1`] = `
"export const Dynamic: ObjectSchema<serializers.Raw, Dynamic> = object({}).passthrough() as any;

export declare namespace Dynamic {
    export interface Raw {
        [key: string]: any;
    }
}
"
`;

exports[`GeneratedObjectTypeSchemaImpl > writeToFile > generates raw type with optional properties (hasQuestionToken) 1`] = `
"export const Partial: ObjectSchema<serializers.Raw, Partial> = object({}) as any;

export declare namespace Partial {
    export interface Raw {
        required: string;
        optional?: string;
    }
}
"
`;

exports[`GeneratedObjectTypeSchemaImpl > writeToFile > generates schema for object with extends 1`] = `
"export const Admin: ObjectSchema<serializers.Raw, Admin> = object({}).extend() as any;

export declare namespace Admin {
    export interface Raw extends RawNamedType {
        role: string;
    }
}
"
`;

exports[`GeneratedObjectTypeSchemaImpl > writeToFile > generates schema for object with extends and extraProperties 1`] = `
"export const ExtendedConfig: ObjectSchema<serializers.Raw, ExtendedConfig> = object({}).extend().passthrough() as any;

export declare namespace ExtendedConfig {
    export interface Raw extends RawNamedType {
        value: string;
        [key: string]: any;
    }
}
"
`;

exports[`GeneratedObjectTypeSchemaImpl > writeToFile > generates schema for object with extraProperties (passthrough) 1`] = `
"export const Config: ObjectSchema<serializers.Raw, Config> = object({}).passthrough() as any;

export declare namespace Config {
    export interface Raw {
        key: string;
        [key: string]: any;
    }
}
"
`;

exports[`GeneratedObjectTypeSchemaImpl > writeToFile > generates schema for object with no properties 1`] = `
"export const Empty: ObjectSchema<serializers.Raw, Empty> = object({}) as any;

export declare namespace Empty {
    export interface Raw {
    }
}
"
`;

exports[`GeneratedObjectTypeSchemaImpl > writeToFile > generates schema for object with properties 1`] = `
"export const User: ObjectSchema<serializers.Raw, User> = object({}) as any;

export declare namespace User {
    export interface Raw {
        name: string;
        age: string;
    }
}
"
`;

exports[`GeneratedObjectTypeSchemaImpl > writeToFile > uses objectWithoutOptionalProperties when noOptionalProperties is true 1`] = `
"export const StrictUser: ObjectSchema<serializers.Raw, StrictUser> = objectWithoutOptionalProperties({}) as any;

export declare namespace StrictUser {
    export interface Raw {
        name: string;
    }
}
"
`;

exports[`GeneratedUndiscriminatedUnionTypeSchemaImpl > writeToFile > generates raw type alias as union of raw member types 1`] = `
"export const MixedValue: Schema<serializers.Raw, MixedValue> = undiscriminatedUnion([...]) as any;

export declare namespace MixedValue {
    export type Raw = string | string | string;
}
"
`;

exports[`GeneratedUndiscriminatedUnionTypeSchemaImpl > writeToFile > generates schema for single-member union 1`] = `
"export const SingleValue: Schema<serializers.Raw, SingleValue> = undiscriminatedUnion([...]) as any;

export declare namespace SingleValue {
    export type Raw = string;
}
"
`;

exports[`GeneratedUndiscriminatedUnionTypeSchemaImpl > writeToFile > generates schema for union with named type members 1`] = `
"export const Response: Schema<serializers.Raw, Response> = undiscriminatedUnion([...]) as any;

export declare namespace Response {
    export type Raw = string | string;
}
"
`;

exports[`GeneratedUndiscriminatedUnionTypeSchemaImpl > writeToFile > generates schema for union with primitive members 1`] = `
"export const Value: Schema<serializers.Raw, Value> = undiscriminatedUnion([...]) as any;

export declare namespace Value {
    export type Raw = string | string;
}
"
`;

exports[`GeneratedUnionTypeSchemaImpl > generateRawTypeDeclaration > generates raw type declaration for samePropertiesAsObject union 1`] = `
"export declare namespace Shape {
    export type Raw = Shape.Circle;

    export interface Circle extends RawNamedType {
        type: "circle";
    }
}
"
`;

exports[`GeneratedUnionTypeSchemaImpl > generateRawTypeDeclaration > generates raw type declaration in module for noProperties union 1`] = `
"export declare namespace Event {
    export type Raw = Event.Click;

    export interface Click {
        type: "click";
    }
}
"
`;

exports[`GeneratedUnionTypeSchemaImpl > writeSchemaToFile > calls writeSchemaToFile which delegates to generatedUnionSchema 1`] = `
"export const Event: Schema<serializers.Raw, ParsedUnion> = union({}).transform() as any;

export declare namespace Event {
    export type Raw = Event.Click;

    export interface Click {
        type: "click";
    }
}
"
`;

exports[`GeneratedUnionTypeSchemaImpl > writeToFile > generates schema output for mixed union type variants 1`] = `
"export const Response: Schema<serializers.Raw, ParsedUnion> = union({}).transform() as any;

export declare namespace Response {
    export type Raw = Response.Empty | Response.Data | Response.Error;

    export interface Empty {
        type: "empty";
    }

    export interface Data extends RawNamedType {
        type: "data";
    }

    export interface Error {
        type: "error";
        message: string;
    }
}
"
`;

exports[`GeneratedUnionTypeSchemaImpl > writeToFile > generates schema output for noProperties union types 1`] = `
"export const Event: Schema<serializers.Raw, ParsedUnion> = union({}).transform() as any;

export declare namespace Event {
    export type Raw = Event.Click | Event.Hover;

    export interface Click {
        type: "click";
    }

    export interface Hover {
        type: "hover";
    }
}
"
`;

exports[`GeneratedUnionTypeSchemaImpl > writeToFile > generates schema output for samePropertiesAsObject union type 1`] = `
"export const Shape: Schema<serializers.Raw, ParsedUnion> = union({}).transform() as any;

export declare namespace Shape {
    export type Raw = Shape.Circle;

    export interface Circle extends RawNamedType {
        type: "circle";
    }
}
"
`;

exports[`GeneratedUnionTypeSchemaImpl > writeToFile > generates schema output for singleProperty union type 1`] = `
"export const Container: Schema<serializers.Raw, ParsedUnion> = union({}).transform() as any;

export declare namespace Container {
    export type Raw = Container.String;

    export interface String {
        type: "string";
        value: string;
    }
}
"
`;

exports[`GeneratedUnionTypeSchemaImpl > writeToFile > generates schema output with base properties 1`] = `
"const _Base = object({});
export const Event: Schema<serializers.Raw, ParsedUnion> = union({}).transform() as any;

export declare namespace Event {
    export type Raw = Event.Click;

    export interface Click extends _Base {
        type: "click";
    }

    export interface _Base {
        timestamp: string;
    }
}
"
`;

exports[`GeneratedUnionTypeSchemaImpl > writeToFile > generates schema output with includeUtilsOnUnionMembers 1`] = `
"export const Shape: Schema<serializers.Raw, ParsedUnion> = union({}).transform() as any;

export declare namespace Shape {
    export type Raw = Shape.Circle;

    export interface Circle {
        type: "circle";
    }
}
"
`;

exports[`TypeSchemaGenerator > passes noOptionalProperties to generated schemas 1`] = `
"export const User: ObjectSchema<serializers.Raw, User> = objectWithoutOptionalProperties({}) as any;

export declare namespace User {
    export interface Raw {
        name: string;
    }
}
"
`;
